Minor janitor work.

--- a/FAQ
+++ b/FAQ
@@ -43,7 +43,7 @@ version checking. (In other hand, PKG_CHECK_MODULES has such version
 checking.) I don't want to extend autotrace.m4 anymore.  It will cause
 bugs. (Masatake YAMATO<jet@gyve.org>)
 
-Q3. Does autotrace could be built on MacOSX? (Many people)
+Q3. Can autotrace be built on MacOSX? (Many people)
 A3. Yes. I tested on sourceforge's compilefarm.
     libtool shows a strange warning but autotrace could
     be built and run. (Masatake YAMATO<jet@gyve.org>)
